--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-black">
+  <body class="dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
